# eulerian-hamiltonian-study

analysis/: adjacency_list_eulerian.csv  adjacency_matrix_eulerian.csv  adjacency_matrix_hamiltonian.csv  analysis.ipynb  incidency_matrix_eulerian.csv
src/: CMakeLists.txt  main.cpp  tp2
src/generators/: eulerian_graphs.py  graph-15.txt  hamiltonian_graphs.py
src/generators/eulerian/: graph-10.txt  graph-11.txt  graph-12.txt  graph-13.txt  graph-14.txt  graph-15.txt  graph-16.txt  graph-17.txt  graph-18.txt  graph-19.txt  graph-20.txt  graph-21.txt  graph-22.txt  graph-23.txt  graph-24.txt  graph-25.txt  graph-26.txt  graph-27.txt  graph-28.txt  graph-29.txt  graph-3.txt  graph-30.txt  graph-31.txt  graph-32.txt  graph-33.txt  graph-34.txt  graph-35.txt  graph-36.txt  graph-37.txt  graph-38.txt  graph-39.txt  graph-4.txt  graph-40.txt  graph-41.txt  graph-42.txt  graph-43.txt  graph-44.txt  graph-45.txt  graph-46.txt  graph-47.txt  (+23 more)
src/generators/hamiltonian/: graph-10.txt  graph-11.txt  graph-12.txt  graph-4.txt  graph-5.txt  graph-6.txt  graph-7.txt  graph-8.txt  graph-9.txt
src/lib/: doubly-linked-list.hpp  graph-adj-list.hpp  graph-adj-matrix.hpp  graph-incidency-matrix.hpp  graph.hpp  list.hpp  utils.hpp
